# foodle

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  manage.py  mypy.ini  pyproject.toml
foodle/: asgi.py  settings.py
main/: models.py  tests.py
main/migrations/: 0001_initial.py
