[tool.poetry]
name = "foodle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"
mypy = "^0.770"
black = "^19.10b0"
flake8-import-order = "^0.18.1"
isort = "^4.3.21"
django-stubs = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
